--- a/finance-web-blog/package.json
+++ b/finance-web-blog/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.11",
+    "@apollo/server": "^4.11.3",
+    "@as-integrations/next": "^3.2.0",
     "@popperjs/core": "^2.11.8",
+    "apollo-datasource-mongodb": "^0.6.0",
     "bootstrap": "^5.3.3",
+    "graphql": "^16.10.0",
+    "mongoose": "^8.10.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/react": "19.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.6"
   }
