--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@clerk/nextjs": "^6.11.3",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "react-intersection-observer": "^9.16.0"
   }
 }
